erDiagram
    Candidate ||--o{ Application : "applies via"
    Job ||--o{ Application : "receives"
    Job ||--|{ JobStage : "has pipeline"
    Application }o--|| JobStage : "current stage"
    Application ||--o{ Scorecard : "evaluated by"
    Candidate ||--o{ Note : "has"
    Candidate ||--o{ Tag : "labeled with"
    Candidate ||--o{ Activity : "generates"
    User ||--o{ Scorecard : "submits"
    User ||--o{ Note : "authors"
    Job }o--o{ User : "hiring team"
    Department ||--o{ Job : "owns"
    Office ||--o{ Job : "located at"
